# phaos

./: .clang-format  .clang-tidy  CMakeLists.txt
src/: film.cpp  film.hpp  geometry.hpp
